# reaction-acceleration

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: methodology-notes.md  reproducibility.md
examples/: README.md  autocatalysis_landmark.py
scripts/figures/: README.md  figure1_thermodynamic.py  figure2_mechanisms.py  figure3_autocatalysis.py  figure4_oregonator.py  graphical_abstract.py
src/reaction_acceleration/: __init__.py  bootstrap.py  cli.py  derivatives.py  landmarks.py
test/: test_bootstrap.py  test_derivatives.py
